--- a/index.html
+++ b/index.html
@@ -165,9 +165,7 @@
                     <div class="sec4-divs">
                         <i class="fa-regular fa-gem"></i>
                         <h2 class="sec4-h2">Diversity Of Choices</h2>
-                        <div class="sec4-p">
-                            <p>We offer a wide variety of clothing that meets all tastes.</p>
-                        </div>
+                        <p class="sec4-p">We offer a wide variety of clothing that meets all tastes.</p>
                     </div>
 
                     <div class="sec4-divs">
