--- a/index.html
+++ b/index.html
@@ -12,30 +12,14 @@
             <img class="logo" src="images/img1.png" alt="Error!">
 
             <ul class="header-ul">
-                <li><a href="#" target="_blank">Home</a>
-                    <div class="em-div"></div>
-                </li>
-                <li><a href="#" target="_blank">About</a>
-                    <div class="em-div"></div>
-                </li>
-                <li><a href="#" target="_blank">Portfolio</a>
-                    <div class="em-div"></div>
-                </li>
-                <li><a href="#" target="_blank">Services</a>
-                    <div class="em-div"></div>
-                </li>
-                <li><a href="#" target="_blank">Prices</a>
-                    <div class="em-div"></div>
-                </li>
-                <li><a href="#" target="_blank">Team</a>
-                    <div class="em-div"></div>
-                </li>
-                <li><a href="#" target="_blank">Blog</a>
-                    <div class="em-div"></div>
-                </li>
-                <li><a href="#" target="_blank">Contact</a>
-                    <div class="em-div"></div>
-                </li>
+                <li><a href="#" target="_blank">Home</a></li>
+                <li><a href="#" target="_blank">About</a></li>
+                <li><a href="#" target="_blank">Portfolio</a></li>
+                <li><a href="#" target="_blank">Services</a></li>
+                <li><a href="#" target="_blank">Prices</a></li>
+                <li><a href="#" target="_blank">Team</a></li>
+                <li><a  class="a6" href="#" target="_blank">Blog</a></li>
+                <li><a href="#" target="_blank">Contact</a></li>
             </ul>
 
         </div> <!-- /header -->
